search area and icons

--- a/resources/assets/scss/main.scss
+++ b/resources/assets/scss/main.scss
@@ -1,5 +1,6 @@
 @import url( 'https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700');
 @import "reset";
+@import "variables";
 
 
 
@@ -78,6 +79,20 @@ body {
         }
       }
     }
+
+    #content-area{
+      .search-header{
+        .search-box{
+          width: 600px;
+          margin: 0 auto;
+          input[type=text]{
+            color: #F3F3F3;
+            width: 99.5%;
+          }
+        }
+      }
+    }
+
 
     h1 {
       font-weight: 100;
