--- a/resources/views/welcome.edge
+++ b/resources/views/welcome.edge
@@ -36,6 +36,19 @@
       </div>
     </section>
     <section id="content-area">
+      <div class="search-header">
+        <div class="search-box">
+          <input type=text name="" value="search...">
+          <i class="fas fa-user-friends"></i>
+          <i class="fas fa-comments"></i>
+          <i class="fas fa-bell"></i>
+          <div class="icon-section">
+
+          </div>
+        </div>
+
+      </div>
+      <div class="main-area"></div>
     </section>
     <section id="messenger">
     </section>
