search bar and notification icons html & css

--- a/resources/assets/scss/main.scss
+++ b/resources/assets/scss/main.scss
@@ -20,7 +20,7 @@ body {
 
   .app-container {
     width: 100%;
-    max-width: 1300px;
+    max-width: 1400px;
     background: white;
     min-height: calc(100vh - 15vh);
     border-radius: 5px;
@@ -81,13 +81,56 @@ body {
     }
 
     #content-area{
+      overflow: hidden;
       .search-header{
+        padding: 10px;
+        position: relative;
+        -webkit-box-shadow: 0px 0px 15px -3px rgba(191,191,191,1);
+        -moz-box-shadow: 0px 0px 15px -3px rgba(191,191,191,1);
+        box-shadow: 0px 0px 15px -3px rgba(191,191,191,1);
         .search-box{
           width: 600px;
           margin: 0 auto;
+
           input[type=text]{
-            color: #F3F3F3;
-            width: 99.5%;
+            color: $ptext;
+            width: 95%;
+            background: $background;
+            border: none;
+            border-radius: 3px;
+            font-size: 1.2rem;
+            padding: 5px 15px;
+          }
+          .icon-section{
+            .updates{
+              position: absolute;
+              top: 15px;
+              right: 0;
+              font-size: 1.2rem;
+              padding-right: 5px;
+              & > div {
+                display: inline-block;
+                color: $ptext;
+                padding: 0 1px;
+
+                .count{
+                  display: none;
+                  background: $red;
+                  color: white;
+                  font-size: .9rem;
+                  position: relative;
+                  bottom: 9px;
+                  right: 10px;
+                  border-radius: 40%;
+                  text-align: center;
+                  padding: 3px;
+                  border: 2px solid white;
+                  &.active{
+                    display:inline-block;
+                  }
+                }
+              }
+            }
           }
         }
       }
