--- a/resources/views/welcome.edge
+++ b/resources/views/welcome.edge
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Hello Adonis</title>
+  <title>Okwu | Home</title>
 
  <link rel="stylesheet" href="/css/main.css">
  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
@@ -38,14 +38,28 @@
     <section id="content-area">
       <div class="search-header">
         <div class="search-box">
-          <input type=text name="" value="search...">
-          <i class="fas fa-user-friends"></i>
-          <i class="fas fa-comments"></i>
-          <i class="fas fa-bell"></i>
+          <input type=text name="" value="" placeholder="search...">
           <div class="icon-section">
 
-          </div>
+            <div class="updates">
+              <div class="friends noti">
+                <i class="fas fa-user-friends"></i>
+                <div class="friend-count count active">0</div>
+              </div>
+
+              <div class="messages noti">
+                <i class="fas fa-comments"></i>
+                <div class="message-count count active">0</div>
+              </div>
+
+              <div class="notifications noti">
+                <i class="fas fa-bell"></i>
+                <div class="notification-count count active">0</div>
+              </div>
+            </div>
         </div>
+
+
 
       </div>
       <div class="main-area"></div>
