update buttons html & css

--- a/resources/assets/scss/_variables.scss
+++ b/resources/assets/scss/_variables.scss
@@ -6,5 +6,5 @@ $lightblue: #32AEFF;
 $ptext: #797979;
 $header: #3C3C3C;
 $border: #EBEBEB;
-$searchInputBG: #1E88F4;
+$searchBG: #1E88F4;
 $searchInputBG: #0472E3;
