--- a/resources/assets/scss/main.scss
+++ b/resources/assets/scss/main.scss
@@ -2,6 +2,9 @@
 @import "reset";
 @import "variables";
 
+*{
+  box-sizing: border-box;
+}
 
 
 body {
@@ -80,7 +83,7 @@ body {
       }
     }
 
-    #content-area{
+    #content-container{
       overflow: hidden;
       .search-header{
         padding: 10px;
@@ -106,7 +109,7 @@ body {
               position: absolute;
               top: 15px;
               right: 0;
-              font-size: 1.2rem;
+              font-size: 1.4rem;
               padding-right: 5px;
               & > div {
                 display: inline-block;
@@ -117,14 +120,14 @@ body {
                   display: none;
                   background: $red;
                   color: white;
-                  font-size: .9rem;
+                  font-size: .6rem;
                   position: relative;
                   bottom: 9px;
                   right: 10px;
                   border-radius: 40%;
                   text-align: center;
-                  padding: 3px;
-                  border: 2px solid white;
+                  padding: 2px 3px;
+                  border: 3px solid white;
                   &.active{
                     display:inline-block;
                   }
@@ -135,7 +138,79 @@ body {
         }
       }
     }
+      .content-area{
+        .compose-section{
+          width: 600px;
+          margin: 0 auto;
+          padding: 35px 0;
+          position: relative;
+          textarea{
+            max-height: 75px;
+            background: $textfield;
+            width: 100%;
+            border: none;
+            padding: 10px 25px;
+            border-radius:5px;
+            font-size: 1.2rem;
+            resize: none;
+          }
+          .user-img{
+            background: url("https://d3iw72m71ie81c.cloudfront.net/female-38.jpg");
+            height: 40px;
+            width: 40px;
+            background-position: center center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            border-radius: 50%;
+            border: 3px solid $darkblue;
+            position:absolute;
+            top: 20px;
+            left: -20px;
+          }
+          .buttons{
+            position:absolute;
+            right: -20px;
+            bottom: 20px;
+            display: flex;
 
+            .button{
+              background: white;
+              height: 40px;
+              width: 40px;
+              border-radius: 50%;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              margin-left: 15px;
+              font-size: 1.2rem;
+              -webkit-box-shadow: 0px 0px 15px -3px rgba(191,191,191,1);
+              -moz-box-shadow: 0px 0px 15px -3px rgba(191,191,191,1);
+              box-shadow: 0px 0px 15px -3px rgba(191,191,191,1);
+              color: $searchBG;
+
+                &.send-btn{
+                  color: white;
+                  border-radius: 50%;
+                  transform: rotate(50deg);
+                  background: rgba(50,173,255,1);
+                  background: -moz-linear-gradient(top, rgba(50,173,255,1) 0%, rgba(1,120,255,1) 100%);
+                  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(50,173,255,1)), color-stop(100%, rgba(1,120,255,1)));
+                  background: -webkit-linear-gradient(top, rgba(50,173,255,1) 0%, rgba(1,120,255,1) 100%);
+                  background: -o-linear-gradient(top, rgba(50,173,255,1) 0%, rgba(1,120,255,1) 100%);
+                  background: -ms-linear-gradient(top, rgba(50,173,255,1) 0%, rgba(1,120,255,1) 100%);
+                  background: linear-gradient(to bottom, rgba(50,173,255,1) 0%, rgba(1,120,255,1) 100%);
+                }
+
+            }
+          }
+        }
+      }
+
+    #messenger{
+      background: $lightblue;
+      border-left: 2px solid $ptext;
+
+    }
 
     h1 {
       font-weight: 100;
