--- a/resources/views/welcome.edge
+++ b/resources/views/welcome.edge
@@ -35,7 +35,7 @@
         </div>
       </div>
     </section>
-    <section id="content-area">
+    <section id="content-container">
       <div class="search-header">
         <div class="search-box">
           <input type=text name="" value="" placeholder="search...">
@@ -62,7 +62,23 @@
 
 
       </div>
-      <div class="main-area"></div>
+      <div class="content-area">
+        <div class="compose-section">
+          <textarea name="status" rows="8" cols="80" placeholder="Update Your Friends"></textarea>
+          <div class="user-img"></div>
+          <div class="buttons">
+            <div class="photo-btn button">
+              <i class="fas fa-camera"></i>
+            </div>
+            <div class="video-btn button">
+              <i class="fas fa-video"></i>
+            </div>
+            <div class="send-btn button">
+              <i class="fas fa-paper-plane"></i>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <section id="messenger">
     </section>
